local jacascript input

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       <div class="chatArea">
         <ul class="messages"></ul>
       </div>
-      <input class="msgcolor" placeholder="#ffffff"/>
+      <input class="msgcolor" placeholder="FFFFFF"/>
       <select class="msgarea">
         <option value="ue" selected>上</option>
         <option value="naka">中</option>
@@ -39,7 +39,7 @@
     </li>
   </ul>
 
-  <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+  <script src="./jquery-1.10.2.min.js"></script>
   <script src="./jquery.cookie.js"></script>
   <script src="/socket.io/socket.io.js"></script>
   <script src="./main.js"></script>
