--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <title>Socket.IO Chat Example</title>
   <link rel="stylesheet" href="style.css">
+  <script src="./jquery-1.10.2.min.js"></script>
+  <script src="./jquery.cookie.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="./main.js"></script>
 </head>
 <body>
   <ul class="pages">
@@ -18,6 +22,7 @@
         <option value="shita">下</option>
       </select>
       <select class="msgsize">
+
         <option value="big">大きく</option>
         <option value="medium" selected>普通</option>
         <option value="small">小さく</option>
@@ -35,13 +40,9 @@
         <input class="usernameInput" type="text" maxlength="14" />
         <h3 class="title">plz Room number</h3>
         <input class="userroomInput" type="number" maxlength="10" />
+        <h3 class="title login">Login</h3>
       </div>
     </li>
   </ul>
-
-  <script src="./jquery-1.10.2.min.js"></script>
-  <script src="./jquery.cookie.js"></script>
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="./main.js"></script>
 </body>
 </html>
