add send button

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
           <option value="slow">遅い</option>
       </select>
       <input class="inputMessage" placeholder="Type here..."/>
+      <input class="sendmsg" value="send" type="button">
     </li>
     <li class="login page">
       <div class="form">
@@ -40,7 +41,7 @@
         <input class="usernameInput" type="text" maxlength="14" />
         <h3 class="title">plz Room number</h3>
         <input class="userroomInput" type="number" maxlength="10" />
-        <h3 class="title login">Login</h3>
+        <h3 class="title loginbtn">Login</h3>
       </div>
     </li>
   </ul>
