--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Socket.IO Chat Example</title>
+  <title>Dit chat</title>
   <link rel="stylesheet" href="style.css">
   <script src="./jquery-1.10.2.min.js"></script>
   <script src="./jquery.cookie.js"></script>
