--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,9 @@
       </div>
       <input class="msgcolor" placeholder="FFFFFF"/>
       <select class="msgarea">
-        <option value="ue" selected>上</option>
-        <option value="naka">中</option>
-        <option value="shita">下</option>
+        <option value="up" selected>上</option>
+        <option value="mid">中</option>
+        <option value="bot">下</option>
       </select>
       <select class="msgsize">
 
